Rewrite chicken guide chapters and remove quiz.js
Major rewrite of all chickenGuide chapters with new beginner-friendly content, replacing placeholder text with detailed guides for each topic. Removed the React-based quiz.js script and updated quizzes.yml with a new quiz for chapter 0. Also removed automatic quiz rendering from chapter.html layouts and updated the site footer branding.

--- a/chickenGuide/_chapters/00-ch0.md
+++ b/chickenGuide/_chapters/00-ch0.md
@@ -9,6 +9,55 @@ quiz_id: ch0           # tells the layout which quiz to pull
 
 <img src="../../assets/images/hen.png" style="width: 100px;" alt="Description of image">
 
-### Checkpoint 1  
-{% include quiz.html id="ch1_q1" %} 
+The Joys of Raising Chickens
+Raising a small backyard flock is rewarding in ways that often surprise first-time keepers. Below is a concise look at why so many people fall in love with chickens and how they can enrich your daily life.
+
+1. Fresh, Delicious Eggs
+
+Daily supply: Chickens lay an egg every 28hrs, so expect to have a fresh supply of eggs every day.
+
+Unmatched flavor: Yolks are richer and fresher than store-bought eggs. The better they're treated, the better they taste!
+
+Food transparency: You know exactly what went into the eggs you eat.
+
+2. Natural Pest & Weed Control
+
+Chickens happily feast on ticks, beetles, and other garden pests.
+
+Their scratching helps aerate soil and keep weeds in check without chemicals.
+
+They're like little lawn mowers, keeping your garden healthy and tidy.
+
+3. Free Fertilizer
+Manure composted with bedding becomes nutrient-dense “black gold” for gardens, perfect for those raised beds.
+
+A sustainable loop: food scraps → chickens → compost → veggies → back to you!
+
+4. Low-Cost & Low-Maintenance Pets
+Feed, bedding, and basic coop upkeep are inexpensive compared to many pets.
+
+Daily tasks usually take less than 15 minutes (top up feed, refresh water, collect eggs).
+
+5. Educational & Therapeutic Value
+Great hands-on lessons for kids about responsibility, biology, and food systems.
+
+Calming to watch and interact with; their gentle clucking is surprisingly soothing.
+
+6. Sustainable Living Step
+Reduces food waste—kitchen scraps become feed.
+
+Encourages mindful consumption and closer connection to where food comes from.
+
+Getting Started in Three Simple Steps
+Check Local Rules: Verify zoning laws and HOA regulations for backyard poultry.
+
+Build / Buy a Coop: Aim for 3–4 sq ft per bird indoors, 8–10 sq ft in the run. Ensure good ventilation and predator-proofing.
+
+Choose Beginner Breeds: Friendly, hardy layers like Rhode Island Reds, Plymouth Rocks, or Australorps are forgiving for newcomers.
+
+Bottom line: Chickens are more than egg machines—they’re engaging, cost-effective companions that promote a healthier yard and a more sustainable lifestyle. With a modest setup and a bit of daily care, you’ll quickly discover why so many beginners turn into lifelong chicken enthusiasts.
+
+{% include quiz.html id="ch0_q1" %}
+<!-- ### Checkpoint 1  
+{% include quiz.html id="ch1_q1" %}  -->
 
