--- a/chickenGuide/_chapters/01-ch1.md
+++ b/chickenGuide/_chapters/01-ch1.md
@@ -5,4 +5,44 @@ weight: 1
 quiz_id: ch1
 ---
 
+Chapter 1 – Anatomy 101: From Beak to Tail
+
+Understanding your chicken’s body parts lets you spot health issues early, handle birds safely, and build a coop that keeps them comfortable. Here’s a beginner-friendly tour, moving from head to tail—no fancy jargon required.
+
+Head & Neck
+•	Beak – Picks up food, preens feathers, and feels the world. Check for cracks or over-growth.
+•	Comb & Wattles – The red “crown” on top and flaps under the beak help cool the bird. A bright color means good circulation; pale or bluish can signal stress or illness.
+•	Eyes & Ear Openings – Chickens see almost 300° and hear surprisingly well. Cloudy eyes or discharge are early warning signs.
+•	Hackle Feathers – The neck feathers puff up during displays and keep the bird warm. Bald spots often come from pecking-order squabbles.
+
+Torso
+•	Crop – A pouch on the right front chest that stores food before digestion. A rock-hard crop at sunrise may mean a blockage.
+•	Breast (Keel Bone) – Main muscle and weight gauge. A sharp keel bone can mean the bird is underweight.
+•	Feathers – Provide insulation and weatherproofing. A place to dust-bathe keeps them clean.
+•	Preen Gland – A tiny oil gland at the tail base; birds spread the oil through their feathers for waterproofing.
+
+Wings
+•	Short flights are really controlled jumps.
+•	Annual molting (shedding and regrowing feathers) is normal, and egg laying slows during this time.
+•	Clipping one wing (optional) keeps birds from hopping fences—never clip both.
+
+Legs & Feet
+•	Shanks and Toes are built for scratching and perching. Raised leg scales can mean scaly-leg mites.
+•	Spurs on roosters grow with age and may need trimming.
+•	Footpads should stay smooth; swelling or scabs (bumblefoot) often start on wet or rough surfaces.
+
+Tail
+•	Tail feathers help balance and show mood: upright = alert, drooping = unwell.
+•	On roosters, long curved feathers (sickles) and decorative saddle feathers appear at about ten weeks.
+
+A Quick Look Inside
+•	Gizzard – Muscular “chewing” organ that grinds food with grit—offer granite grit if soil is soft.
+•	Ovary & Oviduct (hens) – Where eggs form; an egg takes about 24 hours.
+•	Air-Sac System – Chickens breathe through a network of air sacs, so a draft-free coop is important.
+________________________________________
+Key Takeaways
+1.	Look, listen, and feel your birds often—early detection saves vet bills.
+2.	Provide grit, dust baths, and varied perches to support natural behavior.
+3.	Bright eyes, shiny feathers, a sturdy stance, and a vibrant comb are all signs of a healthy chicken.
+
 
