--- a/chickenGuide/_chapters/02-ch2.md
+++ b/chickenGuide/_chapters/02-ch2.md
@@ -5,3 +5,44 @@ weight: 2              # field used for sorting in chapters.md
 quiz_id: ch2           # tells the layout which quiz to pull
 ---
 
+Chapter 2 – Choosing Your Flock: Breeds for Eggs, Meat & Pets
+
+Picking the right birds is the first big decision a new keeper makes.
+
+Starter Birds for Cold Climates
+If winter lows bite hard, start with hardy, heavyweight layers that keep producing when the thermometer drops:
+
+Jersey Giant – Gentle giants that lay large brown eggs and tolerate snow and ice with ease.
+
+Brahma – Feathered feet act like fuzzy boots; calm temperament and steady winter laying.
+
+All-Around Backyard Staples
+For most temperate backyards these classics deliver dependable eggs, fun personalities, and good looks:
+
+Ameraucana – Blue or green “Easter” eggs and excellent cold tolerance.
+
+Silkie – Fluffy, lap-friendly birds loved by kids; modest layers but unbeatable pets.
+
+Rhode Island Red – Bullet-proof dual-purpose bird (eggs + meat) with strong laying genetics.
+
+Wyandotte – Striking laced plumage, robust health, and solid year-round egg production.
+
+Pullets vs. Straight Run
+Pullets are sexed female chicks—grab these at the farm store when you want hens almost guaranteed.
+
+Straight-run bins are mostly cockerels; only ~10 % turn out to be female due to sexing errors. Unless you specifically need roosters, stick with pullets. Remember this, straight runs means straight males.
+
+One rooster is useful if you plan to hatch chicks—but check city ordinances first and avoid keeping multiple males in a small flock.
+
+Flock Size & Play Space
+A quick rule of thumb: picture each chicken taking up a 1 ft × 1 ft cube when standing. Outdoors, give about 5 sq ft (a 5 ft × 5 ft patch) per bird so they can scratch, dust-bathe, and just be chickens. We’ll dive deeper into run and coop sizing later, but keep that mental image in mind as you sketch your setup.
+
+Key Takeaways
+
+Match breeds to your climate and purpose—cold-hearty giants or easygoing backyard all-rounders.
+
+Buy pullets unless you truly want roosters; even then, one male is plenty for breeding.
+
+Plan generous outdoor space now to avoid crowding headaches later.
+
+With the right mix of hardy layers and friendly pets, your flock will thrive and reward you with years of fresh eggs, garden help, and barnyard entertainment.
