--- a/chickenGuide/_chapters/03-ch3.md
+++ b/chickenGuide/_chapters/03-ch3.md
@@ -5,10 +5,72 @@ weight: 3              # field used for sorting in chapters.md
 quiz_id: ch3           # tells the layout which quiz to pull
 ---
 
-### Integrating the Upstairs and Downstairs Brain
+Chapter 3 – Chicken Life Cycle: Egg to Retired Hen
+Knowing how a chicken grows—from the day the egg is laid until her twilight years—helps you plan housing, feed, and healthcare at every stage.
 
-### Whole-Brain Strategy #3: Engage, Don’t Enrage: Appealing to the Upstairs Brain
+1. Fertile Egg (Day 0)
+How it starts: A rooster mates with a hen; she stores the sperm and lays a fertilized egg.
 
-### Whole-Brain Strategy #4: Use It or Lose It: Exercising the Upstairs Brain
+Incubation clock stays off until the egg is kept at ~99 – 100 °F for several hours. That’s why shipping fertile eggs works.
 
-### Whole-Brain Strategy #5: Move It or Lose It: Moving the Body to Avoid Losing the Mind
+2. Incubation (Days 1 – 21)
+Natural: A broody hen warms and turns the clutch.
+
+Artificial: An incubator controls temperature (99.5 °F) and humidity (45 % first 18 days, 65 % during hatch).
+
+Candling at Day 7 or 10 shows a dark spider-like embryo if growth is on track.
+
+Hatch Day: Chicks pip the shell, rest, then zip the shell open—don’t rush to “help” unless truly stuck.
+
+3. Brooder Chick (0 – 6 weeks)
+Heat: Start at 95 °F and drop 5 °F each week.
+
+Feed: 20 – 22 % protein chick starter.
+
+Water: Shallow dish with marbles to prevent drowning.
+
+Milestones: By week 2 flight feathers appear; by week 4 most chicks can manage 70 °F room temps.
+
+Integrating: Wait until they’re fully feathered (~6 weeks) before moving outdoors or mixing with adults.
+
+4. Juvenile / Grower (6 – 18 weeks)
+Often called pullets (females) and cockerels (males).
+
+Feed: Switch to 16 – 18 % grower feed; too much calcium can harm immature kidneys.
+
+Pecking Order Lessons: Squabbles now set the adult hierarchy.
+
+Rooster Signs: Larger comb, thicker legs, and the first cracked teenage crow around 10–12 weeks.
+
+5. Point-of-Lay Hen (18 – 24 weeks)
+First egg: A small “pullet” egg heralds adulthood.
+
+Nesting Boxes: Provide one box for every 3–4 hens, placed in a dim corner to encourage use.
+
+Diet: Layer feed (16 % protein + 4 % calcium) and free-choice oyster shell.
+
+6. Peak Production (6 months – 2 years)
+Most breeds lay 5–6 eggs per week their first season.
+
+Molting: Annual feather shed (late summer–fall) pauses laying for 4–12 weeks. Extra protein treats (e.g., scrambled eggs, mealworms) help regrowth.
+
+Health: Vaccinations and regular deworming keep them productive.
+
+7. Middle Age (2 – 4 years)
+Egg output gradually declines—roughly 10 % each year.
+
+Broody Urges (some breeds): A hen may want to sit on eggs for 21 days. Break broodiness if you don’t want chicks by isolating her in a wire-bottom crate for a few days.
+
+8. Senior / Retired Hen (4 + years)
+Eggs slow to a trickle; shells may be thinner.
+
+Arthritis & Bumblefoot become more common—offer low easy-to-reach perches and soft bedding.
+
+Final Years: Many backyard hens live 6 – 8 years, some exceed 10 with good care. Decide early whether you’ll keep retirees as pets, rehome, or cull humanely.
+
+Key Takeaways
+The 21-day incubation and 6-week brooder windows are the most hands-on phases—you’ll need heat, hygiene, and chick-safe gear.
+
+Feed changes matter: starter → grower → layer; calcium too early harms chicks.
+
+Plan for the whole life span, not just peak laying years, to honor the commitment you make when you hatch or buy a chick.
