--- a/chickenGuide/_chapters/04-ch4.md
+++ b/chickenGuide/_chapters/04-ch4.md
@@ -5,8 +5,59 @@ weight: 4              # field used for sorting in chapters.md
 quiz_id: ch4           # tells the layout which quiz to pull
 ---
 
-### Integrating Memory for Growth and Healing
+Chapter 4 – Coop & Run Design: Affordable Layouts for Any Yard
+Building your own coop is almost always cheaper, sturdier, and far more user-friendly than the cute prefab boxes stacked at the farm store. Here’s why—and how to do it right.
 
-### Whole-Brain Strategy #6: Use the Remote of the Mind: Replaying Memories
+Skip the Tiny Tractor-Supply Box
+Sticker shock A prefab “six-hen” coop often runs $600–$900 yet barely fits three birds comfortably.
 
-### Whole-Brain Strategy #7: Remember to Remember: Making Recollection a Part of Your Family’s Daily Life
+Awkward access Picture a frightened hen wedged in the far corner—will you really crawl through a 12-inch door to reach her?
+
+Flimsy materials Thin pine and staples rot or pop loose after one wet winter. You can build something twice as strong for the same money.
+
+Core Design Goals
+Human-scale access Full-height door you can walk through, plus waist-level clean-out or egg doors.
+
+Room to breathe Indoors: 3–4 sq ft per bird. Outdoors: 8–10 sq ft minimum (we used the mental 5 ft × 5 ft earlier).
+
+Dry & Draft-free Roof overhangs, good drainage, and plenty of ventilation up high.
+
+Predator proofing ½-inch galvanized hardware cloth—never chicken wire—for every opening.
+
+The DIY Shed-and-Run Blueprint
+Coop “shell” – Repurpose or build an 8 × 8 ft garden shed. Use 2 × 4 wall studs, ½-inch exterior plywood, and an asphalt-shingle or metal roof.
+
+Run frame – Construct with 2 × 4 pressure-treated lumber. Set posts 2 ft deep in concrete or on deck blocks. Minimum size: match the coop footprint—bigger is always better.
+
+Fencing – Install 19-gauge ½-inch hardware cloth, stapled every 4 in. Bury 12 in and bend outward (apron) to stop diggers.
+
+Door & latches – Full-height human door with sturdy barrel bolts and a lockable hasp; add a self-closing spring to keep birds in.
+
+Perches – Lay 2 × 4s flat (wide side up) or use thick branches; place 12 in off the wall and space them 12–14 in apart.
+
+Nesting boxes – Provide one box per 3–4 hens, mounted 18 in above the floor and lower than the perches to discourage sleeping inside.
+
+Flooring – Use deep-litter wood shavings or sand over a vinyl remnant for easy scooping.
+
+Training Chickens to Perch
+Lock-in method: Keep the flock inside the coop (doors shut) for 3–5 nights.
+
+Hands-on: At dusk, gently lift each bird onto a perch. Repetition builds muscle memory.
+
+Positive cues: Dim light and a calm environment make perches more inviting than the floor.
+
+Cost-Saving Hacks
+Scavenge free pallets for framing or nest-box dividers.
+
+Score surplus windows on classifieds for daylight and ventilation.
+
+Paint with returned “oops” paint—color doesn’t matter to chickens.
+
+Key Takeaways
+Design for people first—if you can walk in and clean easily, you’ll keep the coop sanitary and the birds healthy.
+
+A simple shed + hardware-cloth run beats any overpriced prefab box in durability, space, and safety.
+
+Teach perching early; a well-trained flock sleeps high, stays cleaner, and feels secure.
+
+Build once, build right, and your coop will outlast multiple generations of hens—no crawling required.
