--- a/chickenGuide/_chapters/05-ch5.md
+++ b/chickenGuide/_chapters/05-ch5.md
@@ -5,10 +5,4 @@ weight: 5              # field used for sorting in chapters.md
 quiz_id: ch5           # tells the layout which quiz to pull
 ---
 
-### Integrating the Many Parts of the Self
-
-###  Whole-Brain Strategy #8: Let the Clouds of Emotion Roll By: Teaching That Feelings Come and Go
-
-### Whole-Brain Strategy #9: SIFT: Paying Attention to What’s Going On Inside
-
-### Whole-Brain Strategy #10: Exercise Mindsight: Getting Back to the Hub
+Chapter 5 - Essential Equipment – Feeders, Waterers & Must-Have Tools
