--- a/chickenGuide/_chapters/06-ch6.md
+++ b/chickenGuide/_chapters/06-ch6.md
@@ -5,10 +5,4 @@ weight: 6              # field used for sorting in chapters.md
 quiz_id: ch6           # tells the layout which quiz to pull
 ---
 
-Chickens need three types of feed at different stages of lifew
-
-chick food
-
-growing feed
-
-laying feed
+Chapter 6 - Nutrition Made Simple – Feed, Treats & Safe Scraps
