--- a/chickenGuide/_chapters/07-ch7.md
+++ b/chickenGuide/_chapters/07-ch7.md
@@ -5,8 +5,4 @@ weight: 7              # field used for sorting in chapters.md
 quiz_id: ch7           # tells the layout which quiz to pull
 ---
 
-### Refrigerator Sheet
-
-### Whole-Brain Ages and Stages
-
-### Acknowledgments
+Chapter 7 - How To Harvest Eggs – Collecting, Cleaning & Storing
