--- a/chickenGuide/_chapters/08-ch8.md
+++ b/chickenGuide/_chapters/08-ch8.md
@@ -5,4 +5,4 @@ weight: 8              # field used for sorting in chapters.md
 quiz_id: ch8           # tells the layout which quiz to pull
 ---
 
-dfgsdgfdhfdghwgrwgfsg
+Chapter 8 - Breeding Chickens – Embryo to Full-Bred
