--- a/chickenGuide/_chapters/09-ch9.md
+++ b/chickenGuide/_chapters/09-ch9.md
@@ -5,4 +5,4 @@ weight: 9              # field used for sorting in chapters.md
 quiz_id: ch9           # tells the layout which quiz to pull
 ---
 
-fsfsdgsgfgrr
+Chapter 9 - Being Consistent – Daily, Weekly & Seasonal Care Routines
