--- a/chickenGuide/_chapters/10-ch10.md
+++ b/chickenGuide/_chapters/10-ch10.md
@@ -5,4 +5,4 @@ weight: 10              # field used for sorting in chapters.md
 quiz_id: ch10           # tells the layout which quiz to pull
 ---
 
-Chapter 10
+Chapter 10 - Even More About Chickens, All Varieties And Species
