got nav css enabled

--- a/chickenGuide/_chapters/05-ch5.md
+++ b/chickenGuide/_chapters/05-ch5.md
@@ -6,3 +6,61 @@ quiz_id: ch5           # tells the layout which quiz to pull
 ---
 
 Chapter 5 - Essential Equipment – Feeders, Waterers & Must-Have Tools
+
+Chapter 5 – Essential Equipment: Feeders, Waterers & Must-Have Tools
+Sturdy gear keeps your flock healthy and saves you headaches down the road. Below is the core kit—built around durable metal pieces and a few clever add-ons—that every serious keeper should have on Day 1.
+
+1. Feed & Water Systems
+Metal hanging feeder – Galvanized steel is heavy enough that birds can’t tip it, immune to sun-crack, and easy to scrub. Hang it at the birds’ back height to keep litter out.
+
+Metal double-wall waterer – Same “can’t-knock-it-over” weight plus rust-proof if you empty and dry weekly. Add a heated base or submersible de-icer if winters dip below freezing.
+
+Rodent-proof feed bin – A lidded metal trash can lined with a heavy plastic bag keeps moisture and mice out.
+
+2. Storage & Everyday Supplies (park them in an old chest, tote, or shelf)
+Treats: mealworms, rice, cracked corn for training and winter calories.
+
+Crushed oyster shell in a separate dish for calcium, plus granite grit if birds roam on soft soil.
+
+Desiccant packets or a canning-jar of dry rice to wick moisture from treats and feed.
+
+Apple cider vinegar (a splash per gallon) for occasional water-bucket cleaning.
+
+Agricultural lime (not caustic quicklime) to sprinkle on damp coop spots and control odor.
+
+Poop scraper or 3-inch paint scraper for droppings boards and roost bars.
+
+N95 respirators and nitrile gloves—coop dust is no joke.
+
+Grabber arm to snag wayward eggs or trash without stooping.
+
+Pinata feeder—a roll of plastic poultry netting stuffed with grass clippings or fruit peels gives bored hens something to shred.
+
+3. Health & Maintenance Tools
+Basic poultry first-aid kit: vet-wrap, antiseptic spray, blood-stop powder, tweezers.
+
+Digital thermometer / hygrometer inside the coop to flag damp, chill nights.
+
+Solar-powered shed lights or a rechargeable headlamp for after-dark checks.
+
+5-gallon bucket, stiff brush, and mild detergent for weekly waterer scrubs.
+
+Sturdy rake or grain shovel to turn deep litter and remove soiled bedding.
+
+4. Nice-to-Have Extras
+Heated dog-bowl back-up—handy during power outages.
+
+Kitchen scale (5 lb+) to weigh birds monthly and catch weight loss early.
+
+Dust-bath bin filled with sand and wood ash for pest control and feather care.
+
+Extra perches cut from tree limbs—swap in when originals need a deep clean.
+
+Key Takeaways
+Go metal for feeders and waterers—the extra weight prevents spills and lasts for years.
+
+Store feed like a prepper: metal can + plastic liner + desiccant = dry, rodent-free grain.
+
+A well-stocked supply chest (scraper, masks, treats, lime, first-aid) turns coop chores into a five-minute routine instead of a scavenger hunt.
+
+Invest once in the right equipment, and daily chicken care becomes quick, tidy, and—dare we say—fun.
