--- a/chickenGuide/_chapters/06-ch6.md
+++ b/chickenGuide/_chapters/06-ch6.md
@@ -5,4 +5,61 @@ weight: 6              # field used for sorting in chapters.md
 quiz_id: ch6           # tells the layout which quiz to pull
 ---
 
-Chapter 6 - Nutrition Made Simple – Feed, Treats & Safe Scraps
+Chapter 6 – Nutrition Made Simple: Feed, Treats & Safe Scraps
+Keeping a flock healthy is 90 % about what goes into the feeder. Stick to age-appropriate rations, sprinkle in wholesome extras, and steer clear of kitchen no-nos, and you’ll see bright combs, glossy feathers, and strong shells all year long.
+
+1. Age-Right Feeds
+0 – 6 weeks: Medicated Chick Starter (20-22 % protein)
+Stops coccidiosis in its tracks while fueling rapid growth.
+
+6 weeks – 5 months: Grower / Developer Crumbles (18 % protein)
+Lower calcium protects kidneys until the pullets’ bodies are ready to lay.
+
+5–6 months and up: Layer Pellets (16 % protein, 4 % calcium)
+Pellets cut waste and the boosted calcium builds sturdy shells. Offer crushed oyster shell free-choice for extra insurance.
+
+Tip: High-protein brands pay off in feather quality and winter laying. Cheap feed is false economy.
+
+2. DIY Scratch & Daily Treats
+A homemade scratch mix (equal parts whole oats, cracked corn, and black-oil sunflower seeds) keeps birds busy and adds winter calories. Limit scratch and other treats to about 10 % of the total diet—more can dilute vital vitamins and minerals.
+
+Everyday favorites you mentioned:
+
+Cooked rice and oats
+
+Chia seeds (omega-3 boost)
+
+Seasonal watermelon rinds, corn kernels, lettuce, apple bits
+
+Garden weeds and grass clippings stuffed into a piñata feeder for boredom relief
+
+3. The “Would You Feed It to the Dog?” Rule
+If you wouldn’t hand it to the family dog, don’t toss it in the run. That means no:
+
+Citrus peels or banana skins (hard to digest)
+
+Chocolate, candy, or anything sugary
+
+Milk or cheese (chickens lack the enzymes to handle lactose)
+
+Avocado pits or skins, raw potatoes, or green tomato leaves (toxic compounds)
+
+Moldy, salty, or heavily seasoned leftovers
+
+Good in, good out: the cleaner the inputs, the cleaner the eggs.
+
+4. Always Provide
+Fresh water—refill daily; add a splash of apple-cider vinegar once a week for a mild antibacterial boost.
+
+Grit if birds don’t have access to coarse sand or small stones; they need it to grind food in the gizzard.
+
+Free-choice oyster shell once they hit lay to avoid thin shells and calcium robbing from bones.
+
+Key Takeaways
+Match the feed to the life stage—starter, grower, then layer pellets at first egg.
+
+Keep scratch and kitchen treats under 10 % of daily intake; high-protein base feed does the heavy lifting.
+
+Follow the simple dog-test rule for scraps, and you’ll avoid most dietary dangers automatically.
+
+Feed them right, and your chickens will repay you with strong shells, vibrant feathers, and steady production through the seasons.
