--- a/chickenGuide/_chapters/07-ch7.md
+++ b/chickenGuide/_chapters/07-ch7.md
@@ -5,4 +5,75 @@ weight: 7              # field used for sorting in chapters.md
 quiz_id: ch7           # tells the layout which quiz to pull
 ---
 
-Chapter 7 - How To Harvest Eggs – Collecting, Cleaning & Storing
+Chapter 7 – How to Harvest Eggs: Collecting, Cleaning & Storing
+Nothing beats the moment you lift a nest-box lid to find warm, freshly laid eggs. Handle them right and you’ll get maximum freshness, minimal cracks, and top-tier food safety.
+
+1. Collecting
+Check nests twice a day (morning and late afternoon). Frequent collection prevents breakage, deters egg-eating, and discourages broody hens.
+
+Use a clean basket or soft tote—hard buckets let eggs knock together.
+
+Mark the date on each egg or on the carton as soon as you gather them; rotation is easier later.
+
+Cull cracked shells immediately; bacteria slip in fast—feed those eggs back to the dog or compost pile, never to humans.
+
+2. Keeping Eggs Clean Before They Reach You
+Deep bedding & fresh shavings in nest boxes = fewer dirty eggs.
+
+Nests lower than perches so hens sleep on roosts, not in the boxes.
+
+One nest for every 3–4 hens reduces traffic jams and manure build-up.
+
+Curtains or a dim corner give privacy and keep curious feet out.
+
+3. To Wash or Not to Wash?
+Unwashed eggs are coated with the “bloom” (a natural antimicrobial layer). Your approach depends on local rules and how soon you’ll eat them:
+
+Europe-style (bloom on)
+
+If shells look clean, skip washing.
+
+Store at cool room temp (55 – 70 °F / 13 – 21 °C) up to 2 weeks, then refrigerate.
+
+USDA-style (bloom off)
+
+Wash only just before refrigeration.
+
+Use running water warmer than the egg (100–110 °F) so bacteria don’t get sucked in.
+
+A drop of mild dish soap or dedicated egg wash and a soft cloth for stubborn smudges.
+
+Rinse, dry, and place in the fridge right away.
+
+Rule of thumb: Clean the least dirty way first—dry wipe with a loofah or fine sandpaper; damp cloth next; full wash only as a last step.
+
+4. Storing for Peak Freshness
+Refrigerate at 40 °F (4 °C) or lower if washed—or after two weeks on the counter if unwashed.
+
+Pointy end down: keeps the air cell on top and yolk centered.
+
+Original cartons reduce moisture loss and prevent fridge smells.
+
+Use by 45 days from lay date (commercial eggs are legally “fresh” for 30).
+
+Water-glass or freezing whole whisked eggs works for true long-term storage.
+
+5. Freshness Tests
+Float test: place an egg in a bowl of water.
+
+Lies flat = very fresh.
+
+Tilts up = a week or two old.
+
+Floats = air cell large, use only if fully cooked—or discard.
+
+Candling with a flashlight reveals cracks or large air cells without breaking the shell.
+
+Key Takeaways
+Collect often, handle gently, date immediately—that’s most of the battle.
+
+Keep the bloom when you can; wash only when truly needed and always with warm running water.
+
+Refrigerated, dated eggs stay top-quality for six weeks; room-temp storage is fine short-term if the shells stay clean and unwashed.
+
+Master these simple steps and every omelet, custard, or sunny-side-up breakfast will taste exactly like “laid this morning.”
