--- a/chickenGuide/_chapters/08-ch8.md
+++ b/chickenGuide/_chapters/08-ch8.md
@@ -5,4 +5,81 @@ weight: 8              # field used for sorting in chapters.md
 quiz_id: ch8           # tells the layout which quiz to pull
 ---
 
-Chapter 8 - Breeding Chickens – Embryo to Full-Bred
+Chapter 8 – Breeding Chickens: Embryo to Full-Bred
+Hatching your own chicks is where backyard chicken-keeping turns into a full life-cycle project. Below is a step-by-step guide—from choosing parent stock to raising vigorous, true-to-type offspring—along with the gear and habits that set you up for consistent success.
+
+1. Select Quality Parent Stock
+Purpose first: Pick birds that already excel at what you value—egg count, table weight, show conformation, or rare-breed preservation.
+
+Health & temperament: Only breed birds with clear eyes, smooth breathing, clean legs, and calm, friendly behavior.
+
+Genetic diversity: Keep at least two unrelated rooster lines if you plan on multi-generation breeding.
+
+Mating ratio: 1 rooster to 8–10 hens prevents over-breeding and ensures fertile eggs.
+
+2. Equipment Checklist
+Breeding pen or portable tractor to isolate chosen birds two weeks before collecting hatching eggs (clears out previous matings).
+
+Digital incubator with fan, automatic turner, and accurate thermometer/hygrometer—stable 99.5 °F (forced-air) or 101–102 °F (still-air).
+
+Egg candler (LED flashlight works) for fertility checks at Day 7 and Day 14.
+
+Separate hatcher or the same incubator locked down for Days 18-21; bump humidity to 65 % and stop turning.
+
+Brooder box: plastic tote or stock tank, heat plate or lamp, 95 °F start temp, chick-grade feeders and waterers.
+
+Leg bands or zip-ties in multiple colors for tracking lines once chicks feather out.
+
+Notebook or flock-management app for pairing records, hatch rates, and performance notes.
+
+3. Collecting & Setting Hatching Eggs
+Gather at least twice daily; store pointed end down, 55-60 °F, 50 % humidity.
+
+Use only eggs laid within seven days for best hatch rates.
+
+Wipe off debris with a dry cloth—wet washing removes the protective bloom.
+
+Warm eggs to room temp before placing into the pre-heated incubator to avoid condensation.
+
+4. Incubation Best Practices
+Turn eggs a minimum of 3× daily (unless you use an automatic turner) until Day 18.
+
+Maintain 45 % humidity first 17 days; candle and discard clears or early quitters.
+
+“Lock down” at Day 18: boost humidity, remove turner, and resist the urge to open lid—steady conditions = easier pipping.
+
+Chicks typically hatch within 24 hours of the first pip; late hatches may need another 24 hours—patience beats premature intervention.
+
+5. Brooding Strong Starts
+Transfer dry, fluffy chicks to a 95 °F brooder; drop temp 5 °F each week.
+
+Feed 20-22 % protein starter and add marbles to water trays to prevent drowning.
+
+Watch for “piled” chicks (too cold) or panting/spreading wings (too hot).
+
+Introduce grit at 1 week if you offer anything beyond crumble feed.
+
+6. Culling & Line Improvement
+Evaluate at 6–8 weeks: vigor, growth rate, feather quality, and breed traits.
+
+Humanely cull or re-home off-type or unhealthy birds—breeding only the best strengthens the line.
+
+Keep detailed notes; pair top hens with the most compatible rooster next season.
+
+7. Common Pitfalls & Fixes
+Low fertility → Too many hens per rooster, overweight birds, or winter breeding; trim saddle feathers if needed.
+
+Early embryo death → Incubator temp swings or dirty eggs; recalibrate sensors and handle eggs with clean, dry hands.
+
+Sticky chicks (shrink-wrapped) → Humidity too low during hatch; aim for 65–70 % in lockdown.
+
+Leg deformities → Slick brooder bedding or vitamin deficiency; use textured shelf-liner and quality starter feed.
+
+Key Takeaways
+Strong genetics + meticulous records = predictable, high-quality hatches.
+
+Control every variable you can—temperature, humidity, turning schedule—and most incubation “mysteries” disappear.
+
+Cull ruthlessly and manage multiple rooster lines to keep your flock vigorous, productive, and true to type.
+
+Master these habits and tools, and each breeding season delivers healthier chicks, better layers, and meat birds that outperform the feed-store imports.
