--- a/chickenGuide/_chapters/09-ch9.md
+++ b/chickenGuide/_chapters/09-ch9.md
@@ -5,4 +5,57 @@ weight: 9              # field used for sorting in chapters.md
 quiz_id: ch9           # tells the layout which quiz to pull
 ---
 
-Chapter 9 - Being Consistent – Daily, Weekly & Seasonal Care Routines
+Chapter 9 – Being Consistent: Daily, Weekly & Seasonal Care Routines
+With a smart layout and stocked supplies, chicken-keeping is truly a 15-minute-a-day hobby. The secret is to front-load the planning—place feeders, waterers, and tools where you can reach them without bending or crawling—and then follow a simple rhythm.
+
+Daily (≈ 5–10 min, leisurely pace)
+Morning check-in
+
+Refill waterer; dump and scrub only if it looks slimy.
+
+Top off the metal feeder—shake it so fresh feed drops.
+
+Quick headcount, quick look at comb color and activity.
+
+Suppertime wind-down
+
+Toss a handful of scratch, rice, or veggie scraps into the run.
+
+Empty any obvious poop from droppings board with your scraper.
+
+Close pop door and stroll by to say “Good night” as they perch.
+
+Weekly (≈ 15 min on the weekend)
+Wipe the metal waterer with a brush and mild soap; rinse and let it sun-dry.
+
+Check feed bin level; restock treats, oyster shell, grit.
+
+Rake or turn bedding in high-traffic spots to keep ammonia down.
+
+Walk the fence line for holes or loose hardware cloth.
+
+Monthly (≈ 30–40 min)
+Full bedding swap: shovel out wet spots, add fresh shavings, and sprinkle a light layer of agricultural lime to keep things dry and odor-free.
+
+Inspect perches and nest boxes—tighten screws or replace cracked boards.
+
+Test door latches and hinges; dab a little oil if they squeak.
+
+Seasonal Touch-Ups
+Season	Quick Focus
+Spring	Brooder ready? Check incubator temps if you plan to hatch.
+
+Summer	Add a second waterer for heat waves; set up extra shade.
+
+Autumn	Pre-molting protein boost (mealworms, scrambled eggs). Deep-clean coop before cold sets in.
+
+Winter	Heated base for waterer; block drafts below roost height, keep ventilation high.
+
+Key Takeaways
+Prep once, glide daily—good layout and full buckets make chores fly.
+
+Water, feed, scratch, “sleep tight” : the entire morning-evening routine takes under a quarter hour.
+
+A monthly bedding flip with safe lime is the only heavy lift; everything else is quick touch-ups.
+
+Consistency beats intensity—stick to this calm cadence and both you and your flock stay relaxed, healthy, and productive.
