--- a/chickenGuide/_chapters/10-ch10.md
+++ b/chickenGuide/_chapters/10-ch10.md
@@ -6,3 +6,5 @@ quiz_id: ch10           # tells the layout which quiz to pull
 ---
 
 Chapter 10 - Even More About Chickens, All Varieties And Species
+
+MORE COMING SOON!!!
